# copilot-session02

./: README.md
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
frontend/: README.md
frontend/src/: App.jsx  index.css
